fix contact form title and spacing

--- a/client/src/Styles/Contact.css
+++ b/client/src/Styles/Contact.css
@@ -14,7 +14,7 @@
     font-family: 'Dancing Script', cursive; 
     scale: 1.8;
     position: relative;
-    top: -49px;
+    top: -55px;
 }
 .contact_submit {
     padding: 2%;
